[package]
name = "typetome"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["fs"] }
